Bug 155237 - Autoscrolling in unfocused tabs is not working
Summary: Autoscrolling in unfocused tabs is not working
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-07 18:50 UTC by Yury
Modified: 2008-01-24 00:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yury 2008-01-07 18:50:22 UTC
Version:           0.40.3 (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

When using tabs, incoming events in unfocused tab are not affecting autoscrolling like events in focused tab. So if i have many incoming messages/status notifications in unfocused tab i need to scroll log down to see them all after switching to it.
Comment 1 Roman Jarosz 2008-01-23 23:44:17 UTC
SVN commit 765403 by rjarosz:

Fix bug 155237: Autoscrolling in unfocused tabs is not working
Fix bug 155172: Tabbed chat windows do not automatically scroll

BUG: 155237
BUG: 155172



 M  +2 -0      kopetechatwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=765403
Comment 2 Roman Jarosz 2008-01-24 00:23:47 UTC
SVN commit 765422 by rjarosz:

Backport fix for bug 155237 and 155172: Autoscrolling in unfocused tabs is not working

CCBUG: 155237
CCBUG: 155172



 M  +2 -0      kopetechatwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=765422