Fix bug 155237: Autoscrolling in unfocused tabs is not working Fix bug 155172: Tabbed chat windows do not automatically scroll

BUG: 155237
BUG: 155172


svn path=/trunk/KDE/kdenetwork/kopete/; revision=765403